--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="game-text"></div>
+            <span>게임종료</span>
+            <button>다시시작<button>
         <div class="score">0</div>
         <div class="playground">
-            <ul>
-            </ul>
+            <ul></ul>
         </div>
-        <script src="js/tetris.js"></script>
+        <script src="js/tetris.js" type="module"></script>
     </div>
 </body>
 </html>
