--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="wrapper">
         <div class="game-text">
-            <span>게임종료</span>
-            <button>다시시작</button>
+            <span>ゲーム終了</span>
+            <button>ReStart?</button>
         </div>
         <div class="score">0</div>
         <div class="playground">
